# packaged-and-simple-app-

./: .gitignore  README.md
package/: README.md  pyproject.toml
package/src/package/: __init__.py  main.py
simple/: README.md  main.py  pyproject.toml
