[project]
name = "package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mateen", email = "matinjani004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pack = "package.main:hello"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
